src/base/panel.styl
// Copyright 2020 Furqan Software Ltd. All Rights Reserved.

@require './func'
@require './color'

.panel
	margin 0 0 10px
	padding 1.25rem
	border 1px solid $silver
	border-radius 0.25rem
	background-color white
	box-shadow 0 1px 0 alpha($dark, 0.0325)

	&.-fit
		padding 0

	&.-green
		border-color $green

	&__head
		min-height 50px
		margin -10px 0 10px

	&__head.-socle
		margin -1.25rem -1.25rem 1.25rem -1.25rem
		padding 1.25rem 1.25rem 0
		border-bottom 1px solid $silver
		box-shadow 0 1px 0 alpha($dark, 0.0325)
		
	&__foot.-shade
		margin 0 -1.25rem -1.25rem -1.25rem
		padding 1.25rem
		background-color lighten($silver, 75%)

	&__title
		display inline-block
		float left
		padding 10px 0

		h1, h2, h3, h4, h5, h6
			margin 0
			font-size 1.25em
	
		.icon
			margin -2px 5px 0 0
			font-size 1.5rem

	&__actions
		float right
		padding 5px 0

		.btn
			padding 5px 10px
			font-size 0.95em
			
	&__drawer
		display none
		margin -10px -1.25rem 10px
		padding 15px 1.25rem 0
		border-top 1px solid lighten($silver, 50%)
		border-bottom 1px solid lighten($silver, 50%)
		box-shadow inset 0 1px 0 alpha($dark, 0.0325)
		
		&:after
			display table
			content " "
			clear both

		&.-open
			display block
	
	&__body .panel__actions
		padding 0

	&__body
		.progress
			margin-bottom 0

	&.-clipped > &__body
		max-height 190px
		overflow hidden
		mask-image linear-gradient(to top, transparent 1%, white 50%)

	&.-closed
		> .panel__head
			margin-bottom -1.25rem

		> .panel__body,
		> .panel__foot
			display none

a > .panel
	transition border-color 0.25s ease-in-out

	&:hover
		border-color lighten($blue, 50%)

section
	> .caption
		margin 0 0 25px
		padding 25px 0
		text-align center
		color $muted

		h1, h2, h3, h4, h5, h6
			margin 0

@media (max-width: 767px)
	.panel .panel__actions .btn
		.icon + .text
			display none

